# vOS

./: .env.example  .gitignore  CMakeLists.txt  Dockerfile  Makefile  Readme.md  System.md  build.bat  copy.txt  docker-compose.yml  start.bat  test.cpp  vcpkg.json
.devcontainer/: devcontainer.json
drivers/: ADCDriver.cpp  DriverInterface.h  DriverTypes.h  GPIODriver.cpp  I2CDriver.cpp  PWMDriver.cpp  SPIDriver.cpp  TimerDriver.cpp  UARTDriver.cpp
scripts/: build.bat  clean.bat  debug.bat  setup.ps1  start.bat
src/: main.cpp
src/kernel/: Clock.cpp  Clock.h  Device.h  DeviceRegistry.cpp  DeviceRegistry.h  DllLoader.cpp  DllLoader.h  HardwareDevice.cpp  HardwareDevice.h  InputMonitor.cpp  InputMonitor.h  Kernel.cpp  Kernel.h  Logger.cpp  Logger.h  VirtualFileSystem.cpp  VirtualFileSystem.h
src/scheduler/: Scheduler.cpp  Scheduler.h  TCB.cpp  TCB.h  TaskManager.cpp  TaskManager.h  TaskTypes.h
src/shell/: Shell.cpp  Shell.h
tasks/: summary.md  task1 - Kernel Bootstrap.md  task10 - communication protocols.md  task11 - security.md  task2 - scheduler.md  task3 - plugin system(driver).md  task4 - filesystem.md  task5 - cli.md  task6 -IQR simulation.md  task7 - advanced features.md  task8 - Real time features.md
